# executorch-benchmark

./: .gitmodules  Makefile  pyproject.toml  setup.sh
src/executorch_benchmark/: __init__.py
