[project]
name = "executorch-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Cao", email = "nickcao@nichi.co" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "vllm>=0.15.1",
]

[project.scripts]
executorch-benchmark = "executorch_benchmark:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    # "executorch"
    # "optimum>=1.27.0",
    # "optimum-executorch>=0.1.0",
    "huggingface-hub>=0.36.2",
    "pillow>=12.1.1",
]
