[project]
name = "executorch-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Nick Cao", email = "nickcao@nichi.co" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.129.0",
    "torchao>=0.16.0",
    "transformers==5.0.0rc1",
    "vllm>=0.16.0",
]

[tool.uv]
constraint-dependencies = [
    "torch==2.10.0",
    "torchaudio==2.10.0",
    "torchvision==0.25.0",
    "torchao==0.16.0",
]
override-dependencies = [
    "transformers==5.0.0rc1",
]

[tool.uv.sources]
vllm = { index = "vllm" }

[[tool.uv.index]]
name = "vllm"
url = "https://wheels.vllm.ai/0.16.0"
explicit = true

[project.scripts]
executorch-benchmark = "executorch_benchmark:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "cmake>=4.2.1",
    # "executorch"
    # "optimum>=1.27.0",
    # "optimum-executorch>=0.1.0",
    # "huggingface-hub>=0.36.2",
    # "pillow>=12.1.1",
]
